[metadata]
name = guacamole-api-wrapper
version = 0.0.2
author = Jonathan Race
author_email = jrace@augusta.edu
description = A Python package that allows for simple interactions with Apache Guacamole REST API as a wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/gacybercenter/gacyberrange/projects/guacamole-api-wrapper
project_urls =
    Bug Tracker = https://gitlab.com/gacybercenter/gacyberrange/projects/guacamole-api-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src